--- a/hello.html
+++ b/hello.html
@@ -7,9 +7,9 @@
     <title>hello</title>
 </head>
 <body>
-<h1>hello world</h1>
-
-
-
+<h1>שלום</h1>
+<P>
+    <a href="world.html">להמשך לחץ כאן</a>
+ </P>
 </body>
 </html>
