--- a/world.html
+++ b/world.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>'world'</title>
 </head>
 <body>
-<h1>"hello world"</h1>
-
-
-
+    <h1>עולם</h1>
 </body>
 </html>
