--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
 <body>
 <h1>שלום</h1>
 <P>
-    <a href="world.html">להמשך לחץ כאן</a>
+    <a href="world.css">להמשך לחץ כאן</a>
  </P>
 </body>
 </html>
